# CalculNumeric

./: Cargo.toml
graphs/: g1.csv  g2.csv  g3.csv
src/: main.rs  utils.rs
src/labs/: lab1.rs  lab2.rs  lab3.rs  lab4.rs  lab6.rs
