[package]
name = "calc_num"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
image = "0.25.9"
linfa = "0.7"
linfa-datasets = { version = "0.7", features = ["iris"]}
linfa-svm = { version = "0.7" }
lstsq = "0.7.0"
nalgebra = "0.34.1"
plotters = "0.3.7"
probability = "0.20.3"
rand = "0.9.2"
rand_distr = "0.5.1"
rust_decimal = {version = "1.38.0", features = ["macros"]}
serde = {version = "1.0.228", features = ["serde_derive"]}
